--- a/turbo.json
+++ b/turbo.json
@@ -644,6 +644,19 @@
         "@botpress/cli#build"
       ]
     },
+    "@bp-bots/knowledgiani#add:integrations": {
+      "cache": false,
+      "dependsOn": ["@botpress/cli#build", "@botpresshub/telegram#build", "@botpresshub/knowledge#build"]
+    },
+    "@bp-bots/knowledgiani#build": {
+      "cache": false,
+      "dependsOn": [
+        "@bp-bots/knowledgiani#add:integrations",
+        "@botpress/client#build",
+        "@botpress/sdk#build",
+        "@botpress/cli#build"
+      ]
+    },
     "@bp-bots/hit-looper#add:integrations": {
       "cache": false,
       "dependsOn": ["@botpress/cli#build", "@botpresshub/telegram#build", "@botpresshub/zendesk#build"]
