fix(integrations/clickup): Update workspace handle

--- a/integrations/clickup/package.json
+++ b/integrations/clickup/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clickup",
-  "integrationName": "jeremie8/clickup",
+  "integrationName": "@botpresshub/clickup",
   "scripts": {
     "login": "bp login",
     "start": "nodemon --watch \"./*\" --ext \"ts\" --exec \"bp deploy -y\"",
