--- a/integrations/intercom/package.json
+++ b/integrations/intercom/package.json
@@ -18,14 +18,15 @@
     "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
+    "axios": "^1.7.8",
     "intercom-client": "^4.0.0"
   },
   "devDependencies": {
+    "@botpress/common": "workspace:*",
     "@sentry/cli": "^2.18.1",
     "@types/node": "^18.11.17",
     "esbuild": "^0.15.18",
     "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "@botpress/common": "workspace:*"
+    "ts-node": "^10.9.1"
   }
 }
