--- a/.github/actions/deploy-integrations/action.yml
+++ b/.github/actions/deploy-integrations/action.yml
@@ -168,7 +168,7 @@ runs:
             elif [ $integration == "google-ai" ]; then
                 base_command="$base_command ${{ inputs.google_ai_secrets }}"
             elif [ $integration == "intercom" ]; then
-                base_command="$base_command ${{ inputs.intercom_secrets }}"
+                base_command="$base_command ${{ inputs.intercom_secrets }} --allowDeprecated"
             fi
 
             if [ $exists -eq 0 ]; then
