chore: rename add:integrations and add:interfaces to bpadd

--- a/bots/hit-looper/package.json
+++ b/bots/hit-looper/package.json
@@ -5,7 +5,7 @@
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
     "build": "bp build",
-    "add:integrations": "ts-node -T ./integrations.ts"
+    "bpadd": "ts-node -T ./add.ts"
   },
   "keywords": [],
   "private": true,
