--- a/integrations/slack/package.json
+++ b/integrations/slack/package.json
@@ -11,7 +11,7 @@
     "fix:format": "prettier --write .",
     "check:lint": "eslint ./ --ext .ts --ext .tsx",
     "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx",
-    "add:interfaces": "echo 'no interfaces to add'"
+    "bpadd": "echo 'no interfaces to add'"
   },
   "keywords": [],
   "author": "",
