--- a/integrations/trello/package.json
+++ b/integrations/trello/package.json
@@ -10,7 +10,7 @@
     "fix:format": "prettier --write .",
     "check:lint": "eslint ./ --ext .ts --ext .tsx",
     "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx",
-    "add:interfaces": "ts-node -T ./interfaces.ts"
+    "bpadd": "ts-node -T ./add.ts"
   },
   "private": true,
   "dependencies": {
