--- a/bots/knowledgiani/package.json
+++ b/bots/knowledgiani/package.json
@@ -6,7 +6,7 @@
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
     "build": "bp build",
-    "add:integrations": "ts-node -T ./integrations.ts"
+    "bpadd": "ts-node -T ./add.ts"
   },
   "dependencies": {
     "@botpress/cli": "workspace:*",
