--- a/integrations/dalle/package.json
+++ b/integrations/dalle/package.json
@@ -9,7 +9,7 @@
     "dev": "bp dev",
     "gen": "bp gen",
     "deploy": "bp deploy",
-    "add:interfaces": "echo 'no interfaces to add'"
+    "bpadd": "echo 'no interfaces to add'"
   },
   "keywords": [],
   "private": true,
