--- a/integrations/googlecalendar/package.json
+++ b/integrations/googlecalendar/package.json
@@ -7,7 +7,7 @@
     "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
-    "add:interfaces": "ts-node -T ./interfaces.ts"
+    "bpadd": "ts-node -T ./add.ts"
   },
   "keywords": [],
   "author": "",
