--- a/integrations/pdf-generator/package.json
+++ b/integrations/pdf-generator/package.json
@@ -4,7 +4,7 @@
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
     "build": "pnpm bp build",
-    "add:interfaces": "echo 'no interfaces to add'"
+    "bpadd": "echo 'no interfaces to add'"
   },
   "private": true,
   "dependencies": {
