--- a/integrations/linear/package.json
+++ b/integrations/linear/package.json
@@ -2,9 +2,8 @@
   "name": "@botpresshub/linear",
   "private": true,
   "scripts": {
-    "start": "pnpm bp serve",
     "build": "pnpm bp build",
-    "login": "pnpm bp login",
+    "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
     "bpadd": "ts-node -T ./add.ts"
