feat(cli): add command reads package.json bpDependencies when no arguments provided

--- a/integrations/airtable/package.json
+++ b/integrations/airtable/package.json
@@ -9,7 +9,7 @@
     "login": "pnpm bp login",
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
-    "add:interfaces": "echo 'no interfaces to add'"
+    "add:interfaces": "pnpm bp add -y"
   },
   "keywords": [],
   "author": "",
