--- a/integrations/googledrive/package.json
+++ b/integrations/googledrive/package.json
@@ -5,7 +5,7 @@
     "login": "bp login",
     "deploy": "bp deploy",
     "build": "bp build",
-    "add:interfaces": "echo 'no interfaces to add'"
+    "add:interfaces": "pnpm bp add -y"
   },
   "private": true,
   "dependencies": {
