--- a/integrations/googlecalendar/package.json
+++ b/integrations/googlecalendar/package.json
@@ -7,7 +7,7 @@
     "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
-    "add:interfaces": "ts-node -T ./interfaces.ts"
+    "add:interfaces": "pnpm bp add -y"
   },
   "keywords": [],
   "author": "",
@@ -25,5 +25,12 @@
     "@types/node": "^18.19.10",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "bpDependencies": {
+    "creatable": "../../interfaces/creatable",
+    "deletable": "../../interfaces/deletable",
+    "listable": "../../interfaces/listable",
+    "readable": "../../interfaces/readable",
+    "updatable": "../../interfaces/updatable"
   }
 }
