--- a/integrations/make/package.json
+++ b/integrations/make/package.json
@@ -6,7 +6,7 @@
     "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
-    "add:interfaces": "echo 'no interfaces to add'"
+    "add:interfaces": "pnpm bp add -y"
   },
   "keywords": [],
   "private": true,
