--- a/bots/bugbuster/package.json
+++ b/bots/bugbuster/package.json
@@ -5,7 +5,7 @@
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
     "build": "bp build",
-    "add:integrations": "ts-node -T ./integrations.ts"
+    "add:integrations": "pnpm bp add -y"
   },
   "private": true,
   "dependencies": {
@@ -18,5 +18,9 @@
     "@types/node": "^18.11.17",
     "execa": "^8.0.1",
     "@botpress/common": "workspace:*"
+  },
+  "bpDependencies": {
+    "github": "../../integrations/github",
+    "slack": "../../integrations/slack"
   }
 }
