--- a/bots/hit-looper/package.json
+++ b/bots/hit-looper/package.json
@@ -5,7 +5,7 @@
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
     "build": "bp build",
-    "add:integrations": "ts-node -T ./integrations.ts"
+    "add:integrations": "pnpm bp add -y"
   },
   "keywords": [],
   "private": true,
@@ -20,5 +20,9 @@
     "@types/node": "^18.11.17",
     "execa": "^8.0.1",
     "@botpress/common": "workspace:*"
+  },
+  "bpDependencies": {
+    "telegram": "../../integrations/telegram",
+    "zendesk": "../../integrations/zendesk"
   }
 }
