--- a/bots/knowledgiani/package.json
+++ b/bots/knowledgiani/package.json
@@ -28,6 +28,8 @@
   },
   "bpDependencies": {
     "telegram": "../../integrations/telegram",
-    "openai": "../../integrations/openai"
+    "openai": "../../integrations/openai",
+    "personality": "../../plugins/personality",
+    "knowledge": "../../plugins/knowledge"
   }
 }
