--- a/bots/hello-world/package.json
+++ b/bots/hello-world/package.json
@@ -7,7 +7,7 @@
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
     "build": "bp build",
-    "add:integrations": "ts-node -T ./integrations.ts"
+    "add:integrations": "pnpm bp add -y"
   },
   "dependencies": {
     "@botpress/cli": "workspace:*",
@@ -25,5 +25,10 @@
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "bpDependencies": {
+    "telegram": "../../integrations/telegram",
+    "webhook": "../../integrations/webhook",
+    "logger": "../../plugins/logger"
   }
 }
