--- a/plugins/knowledge/package.json
+++ b/plugins/knowledge/package.json
@@ -18,7 +18,8 @@
     "@botpress/common": "workspace:*",
     "@bpinternal/genenv": "0.0.1",
     "@types/node": "^18.11.17",
-    "execa": "^8.0.1"
+    "execa": "^8.0.1",
+    "@botpresshub/llm": "workspace:*"
   },
   "bpDependencies": {
     "llm": "../../interfaces/llm"
