--- a/bots/bugbuster/package.json
+++ b/bots/bugbuster/package.json
@@ -17,7 +17,9 @@
     "@bpinternal/genenv": "0.0.1",
     "@types/node": "^18.11.17",
     "execa": "^8.0.1",
-    "@botpress/common": "workspace:*"
+    "@botpress/common": "workspace:*",
+    "@botpresshub/github": "workspace:*",
+    "@botpresshub/slack": "workspace:*"
   },
   "bpDependencies": {
     "github": "../../integrations/github",
