--- a/bots/sheetzy/package.json
+++ b/bots/sheetzy/package.json
@@ -19,7 +19,9 @@
     "@bpinternal/genenv": "0.0.1",
     "@types/node": "^18.11.17",
     "execa": "^8.0.1",
-    "@botpress/common": "workspace:*"
+    "@botpress/common": "workspace:*",
+    "@botpresshub/telegram": "workspace:*",
+    "@botpresshub/gsheets": "workspace:*"
   },
   "bpDependencies": {
     "telegram": "../../integrations/telegram",
