--- a/bots/sinlin/package.json
+++ b/bots/sinlin/package.json
@@ -20,7 +20,9 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.17",
     "execa": "^8.0.1",
-    "@botpress/common": "workspace:*"
+    "@botpress/common": "workspace:*",
+    "@botpresshub/telegram": "workspace:*",
+    "@botpresshub/linear": "workspace:*"
   },
   "bpDependencies": {
     "telegram": "../../integrations/telegram",
