--- a/integrations/freshchat/package.json
+++ b/integrations/freshchat/package.json
@@ -27,7 +27,8 @@
     "@sentry/cli": "^2.18.1",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.17",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@botpresshub/hitl": "workspace:*"
   },
   "bpDependencies": {
     "hitl": "../../interfaces/hitl"
