--- a/integrations/googlecalendar/package.json
+++ b/integrations/googlecalendar/package.json
@@ -24,7 +24,12 @@
     "@sentry/cli": "^2.18.1",
     "@types/node": "^18.19.10",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@botpresshub/creatable": "workspace:*",
+    "@botpresshub/deletable": "workspace:*",
+    "@botpresshub/listable": "workspace:*",
+    "@botpresshub/readable": "workspace:*",
+    "@botpresshub/updatable": "workspace:*"
   },
   "bpDependencies": {
     "creatable": "../../interfaces/creatable",
