--- a/integrations/groq/package.json
+++ b/integrations/groq/package.json
@@ -18,7 +18,9 @@
   "devDependencies": {
     "@types/node": "^18.11.17",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@botpresshub/llm": "workspace:*",
+    "@botpresshub/speech-to-text": "workspace:*"
   },
   "bpDependencies": {
     "llm": "../../interfaces/llm",
