--- a/integrations/todoist/package.json
+++ b/integrations/todoist/package.json
@@ -22,7 +22,8 @@
     "@types/node": "^18.11.17",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.1",
-    "@botpress/common": "workspace:*"
+    "@botpress/common": "workspace:*",
+    "@botpresshub/creatable": "workspace:*"
   },
   "bpDependencies": {
     "creatable": "../../interfaces/creatable"
