--- a/integrations/zendesk/package.json
+++ b/integrations/zendesk/package.json
@@ -24,7 +24,8 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.17",
     "ts-node": "^10.9.1",
-    "@botpress/common": "workspace:*"
+    "@botpress/common": "workspace:*",
+    "@botpresshub/hitl": "workspace:*"
   },
   "bpDependencies": {
     "hitl": "../../interfaces/hitl"
