chore: simplify build process and turbo.json file

--- a/bots/bugbuster/package.json
+++ b/bots/bugbuster/package.json
@@ -4,8 +4,7 @@
     "postinstall": "genenv -o ./.genenv/index.ts -e BUGBUSTER_GITHUB_TOKEN -e BUGBUSTER_GITHUB_WEBHOOK_SECRET -e BUGBUSTER_SLACK_BOT_TOKEN -e BUGBUSTER_SLACK_SIGNING_SECRET",
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
-    "build": "bp build",
-    "add:integrations": "pnpm bp add -y"
+    "build": "bp add -y && bp build"
   },
   "private": true,
   "dependencies": {
