--- a/integrations/asana/package.json
+++ b/integrations/asana/package.json
@@ -3,11 +3,10 @@
   "description": "Asana integration for Botpress",
   "scripts": {
     "start": "pnpm bp serve",
-    "build": "pnpm bp build",
+    "build": "bp add -y && bp build",
     "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint",
-    "add:interfaces": "pnpm bp add -y"
+    "check:bplint": "pnpm exec bp lint"
   },
   "keywords": [],
   "private": true,
