--- a/integrations/googledrive/package.json
+++ b/integrations/googledrive/package.json
@@ -4,8 +4,7 @@
     "check:type": "tsc --noEmit",
     "login": "bp login",
     "deploy": "bp deploy",
-    "build": "bp build",
-    "add:interfaces": "pnpm bp add -y"
+    "build": "bp add -y && bp build"
   },
   "private": true,
   "dependencies": {
