--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "build": "turbo build",
     "bump": "depsynky bump && pnpm -w install",
     "test": "pnpm vitest --run",
-    "check:bplint": "pnpm -r --stream check:bplint",
+    "check:bplint": "turbo check:bplint",
     "check:dep": "depsynky check",
     "check:format": "prettier --check .",
     "check:eslint": "eslint ./ --ext .ts --ext .tsx",
     "check:lint": "pnpm run check:bplint && pnpm run check:eslint",
-    "check:type": "pnpm -r --stream check:type",
+    "check:type": "turbo check:type",
     "fix:dep": "depsynky sync",
     "fix:format": "prettier --write .",
     "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx",
@@ -33,7 +33,7 @@
     "prettier": "^2.8.1",
     "retry-cli": "^0.7.0",
     "ts-node": "^10.9.1",
-    "turbo": "^1.13.3",
+    "turbo": "^2.3.3",
     "typescript": "^5.6.3",
     "vitest": "^2.1.4"
   },
