--- a/bots/hello-world/package.json
+++ b/bots/hello-world/package.json
@@ -6,8 +6,7 @@
     "postinstall": "genenv -o ./.genenv/index.ts -e HELLO_WORLD_TELEGRAM_BOT_TOKEN",
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
-    "build": "bp build",
-    "add:integrations": "pnpm bp add -y"
+    "build": "bp add -y && bp build"
   },
   "dependencies": {
     "@botpress/cli": "workspace:*",
