--- a/integrations/gmail/package.json
+++ b/integrations/gmail/package.json
@@ -4,15 +4,14 @@
   "private": true,
   "scripts": {
     "start": "pnpm bp serve",
-    "build": "pnpm bp build",
+    "build": "bp add -y && bp build",
     "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
     "check:format": "prettier --check .",
     "fix:format": "prettier --write .",
     "check:lint": "eslint ./ --ext .ts --ext .tsx",
-    "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx",
-    "add:interfaces": "pnpm bp add -y"
+    "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx"
   },
   "keywords": [],
   "author": "",
