--- a/integrations/todoist/package.json
+++ b/integrations/todoist/package.json
@@ -2,12 +2,11 @@
   "name": "@botpresshub/todoist",
   "scripts": {
     "start": "pnpm bp serve",
-    "build": "pnpm bp build",
+    "build": "bp add -y && bp build",
     "deploy": "pnpm bp deploy",
     "login": "pnpm bp login",
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint",
-    "add:interfaces": "pnpm bp add -y"
+    "check:bplint": "pnpm exec bp lint"
   },
   "private": true,
   "dependencies": {
