--- a/integrations/trello/package.json
+++ b/integrations/trello/package.json
@@ -2,15 +2,14 @@
   "name": "@botpresshub/trello",
   "integrationName": "trello",
   "scripts": {
-    "build": "pnpm bp build",
+    "build": "bp add -y && bp build",
     "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
     "check:format": "prettier --check .",
     "fix:format": "prettier --write .",
     "check:lint": "eslint ./ --ext .ts --ext .tsx",
-    "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx",
-    "add:interfaces": "pnpm bp add -y"
+    "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx"
   },
   "private": true,
   "dependencies": {
