--- a/integrations/viber/package.json
+++ b/integrations/viber/package.json
@@ -4,11 +4,10 @@
   "private": true,
   "scripts": {
     "start": "pnpm bp serve",
-    "build": "pnpm bp build",
+    "build": "bp add -y && bp build",
     "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint",
-    "add:interfaces": "pnpm bp add -y"
+    "check:bplint": "pnpm exec bp lint"
   },
   "keywords": [],
   "author": "",
