--- a/plugins/analytics/package.json
+++ b/plugins/analytics/package.json
@@ -2,7 +2,7 @@
   "name": "@botpresshub/analytics",
   "scripts": {
     "check:type": "tsc --noEmit",
-    "build": "bp build",
+    "build": "bp add -y && bp build",
     "add:integrations": "echo 'no integrations to add'"
   },
   "private": true,
