--- a/bots/knowledgiani/package.json
+++ b/bots/knowledgiani/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "postinstall": "genenv -o ./.genenv/index.ts -e KNOWLEDGIANI_TELEGRAM_BOT_TOKEN",
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint",
+    "check:bplint": "bp lint",
     "build": "bp add -y && bp build"
   },
   "dependencies": {
