--- a/integrations/groq/package.json
+++ b/integrations/groq/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@botpresshub/groq",
   "scripts": {
-    "start": "pnpm bp serve",
     "build": "bp add -y && bp build",
-    "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint"
+    "check:bplint": "bp lint"
   },
   "private": true,
   "dependencies": {
