--- a/interfaces/creatable/package.json
+++ b/interfaces/creatable/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint",
-    "deploy": "pnpm bp deploy"
+    "check:bplint": "bp lint"
   },
   "license": "MIT",
   "dependencies": {
