--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "scripts": {
     "build": "turbo build",
     "bump": "depsynky bump && pnpm -w install",
-    "test": "pnpm vitest --run",
+    "test": "vitest --run",
     "check:bplint": "turbo check:bplint",
     "check:dep": "depsynky check",
     "check:format": "prettier --check .",
     "check:eslint": "eslint ./ --ext .ts --ext .tsx",
-    "check:lint": "pnpm run check:bplint && pnpm run check:eslint",
+    "check:lint": "pnpm check:bplint && pnpm check:eslint",
     "check:type": "turbo check:type",
     "fix:dep": "depsynky sync",
     "fix:format": "prettier --write .",
