--- a/integrations/asana/package.json
+++ b/integrations/asana/package.json
@@ -2,11 +2,9 @@
   "name": "@botpresshub/asana",
   "description": "Asana integration for Botpress",
   "scripts": {
-    "start": "pnpm bp serve",
     "build": "bp add -y && bp build",
-    "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint"
+    "check:bplint": "bp lint"
   },
   "keywords": [],
   "private": true,
