--- a/integrations/freshchat/package.json
+++ b/integrations/freshchat/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint",
+    "check:bplint": "bp lint",
     "build": "bp add -y && bp build",
     "eslint": "eslint ./ --ext .ts --ext .tsx --fix"
   },
