--- a/integrations/gmail/package.json
+++ b/integrations/gmail/package.json
@@ -3,11 +3,9 @@
   "description": "Gmail integration for Botpress",
   "private": true,
   "scripts": {
-    "start": "pnpm bp serve",
     "build": "bp add -y && bp build",
-    "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint",
+    "check:bplint": "bp lint",
     "check:format": "prettier --check .",
     "fix:format": "prettier --write .",
     "check:lint": "eslint ./ --ext .ts --ext .tsx",
