--- a/integrations/notion/package.json
+++ b/integrations/notion/package.json
@@ -2,7 +2,7 @@
   "name": "@botpresshub/notion",
   "scripts": {
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint",
+    "check:bplint": "bp lint",
     "build": "bp add -y && bp build"
   },
   "keywords": [],
