--- a/integrations/pdf-generator/package.json
+++ b/integrations/pdf-generator/package.json
@@ -2,7 +2,7 @@
   "name": "@botpresshub/pdf-generator",
   "scripts": {
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint",
+    "check:bplint": "bp lint",
     "build": "bp add -y && bp build"
   },
   "private": true,
