--- a/integrations/slack/package.json
+++ b/integrations/slack/package.json
@@ -2,11 +2,9 @@
   "name": "@botpresshub/slack",
   "private": true,
   "scripts": {
-    "start": "pnpm bp serve",
     "build": "bp add -y && bp build",
-    "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint",
+    "check:bplint": "bp lint",
     "check:format": "prettier --check .",
     "fix:format": "prettier --write .",
     "check:lint": "eslint ./ --ext .ts --ext .tsx",
