--- a/integrations/trello/package.json
+++ b/integrations/trello/package.json
@@ -3,9 +3,8 @@
   "integrationName": "trello",
   "scripts": {
     "build": "bp add -y && bp build",
-    "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint",
+    "check:bplint": "bp lint",
     "check:format": "prettier --check .",
     "fix:format": "prettier --write .",
     "check:lint": "eslint ./ --ext .ts --ext .tsx",
