--- a/integrations/zapier/package.json
+++ b/integrations/zapier/package.json
@@ -3,12 +3,9 @@
   "description": "Zapier integration for Botpress",
   "private": true,
   "scripts": {
-    "start": "pnpm bp serve",
     "build": "bp add -y && bp build",
-    "login": "pnpm bp login",
-    "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint",
+    "check:bplint": "bp lint",
     "test": "jest"
   },
   "keywords": [],
